update example report

--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -106,10 +106,8 @@
             }
 
             .circular-view-fig {
-                height: 100%;
-                width: 100%;
+                width: 80%;
             }
-
 
             .tree-fig {
                 width: 1100px;
@@ -141,7 +139,7 @@
             -->
 
             <div class="report-info pull-right">
-                <span>Report Date:</span> 2018/04/21<br>
+                <span>Report Date:</span> 04/23/2018<br>
                 <span>Organism:</span> Staphylococcus aureus strain VB4283
             </div>
         </header>
@@ -211,8 +209,8 @@
                 The Genome Annotation Service in PATRIC [1] uses the RAST tool kit (RASTtk) [6] to
                 provide annotation of genomic features. The job for Staphylococcus aureus strain VB4283
                 ran under job number .
-                The annotation job started at April 20th 2018, 7:00:19pm
-                and completed at April 20th 2018, 7:00:19pm
+                The annotation job started at April 23rd 2018, 1:46:18pm
+                and completed at April 23rd 2018, 1:46:18pm
                 after 0 seconds.
                 This genome was described to be in the domain
                 
@@ -305,15 +303,9 @@
                 <tbody>
                     <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                     <tr>
-                        <td>Proteins with PATRIC genus-specific family (PLfam) assignments</td>
+                        <td>Hypothetical proteins</td>
                         <td class="align-right">
-                            2,673
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Proteins with PATRIC cross-genus family (PGfam) assignments</td>
-                        <td class="align-right">
-                            2,673
+                            527
                         </td>
                     </tr>
                     <tr>
@@ -341,9 +333,15 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>Hypothetical proteins</td>
+                        <td>Proteins with PATRIC genus-specific family (PLfam) assignments</td>
                         <td class="align-right">
-                            527
+                            2,673
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Proteins with PATRIC cross-genus family (PGfam) assignments</td>
+                        <td class="align-right">
+                            2,673
                         </td>
                     </tr>
                 </tbody>
@@ -357,9 +355,7 @@
             <fig-num>Figure 1</fig-num>
 
 
-            <div class="circular-view-fig"><!--?xml version="1.0" encoding="utf-8" standalone="no"?-->
-
-<svg viewBox="0 0 3000 3000" version="1.1" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink">
+            <div class="circular-view-fig center"><!--?xml version="1.0" encoding="utf-8" standalone="no"?--><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3000 3000">
 <g id="bg">
 <rect x="0" y="0" width="3000px" height="3000px" style="fill:rgb(255,255,255);"/>
 </g>
@@ -11293,17 +11289,16 @@
          <!-- only shown if data is available -->
         <section>
             <h2>Antimicrobial Resistance Analysis</h2>
-            <table class="lg-table center">
+            <table class="lg-table kv-table center">
                 <thead class="table-header">
                     <tr>
-                        <th colspan="2"><table-num>Table 5.</table-num> Antimicrobial Resistance</th>
+                        <th colspan="2"><table-num>Table 5.</table-num> Analysis of Antimicrobial Resistance Phenotypes</th>
                     </tr>
                 </thead>
 
-
                 <tbody>
                     <tr class="row-header">
-                        <td>Phenotypes</td>
+                        <td></td>
                         <td>Antibiotics</td>
                     </tr>
                     <tr>
