--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -238,11 +238,11 @@
                     </tr>
                     <tr>
                         <td>Job Started</td>
-                        <td class="align-right">April 26th 2018, 7:22:24pm</td>
+                        <td class="align-right">April 26th 2018, 7:31:17pm</td>
                     </tr>
                     <tr>
                         <td>Job Completed</td>
-                        <td class="align-right">April 26th 2018, 7:22:24pm</td>
+                        <td class="align-right">April 26th 2018, 7:31:17pm</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Total Time</td>
@@ -11284,9 +11284,9 @@
             <h2>Specialty Genes</h2>
             <p>
                 Many of the genes annotated in  have homology to known known
-                transporters<sup class="reference">[<a href="#citation-6">6</a>]</sup>, virulence factors (Mao, et al. 2015; Chen, et al. 2016),
-                drug targets<sup class="reference">[<a href="#citation-7">7</a>]</sup><sup class="reference">[<a href="#citation-8">8</a>]</sup>,
-                and antibiotic resistance genes<sup class="reference">[<a href="#citation-9">9</a>]</sup>.
+                transporters<sup class="reference">[<a href="#citation-6">6</a>]</sup>, virulence factors<sup class="reference">[<a href="#citation-7">7</a>]</sup><sup class="reference">[<a href="#citation-8">8</a>]</sup>,
+                drug targets<sup class="reference">[<a href="#citation-9">9</a>]</sup><sup class="reference">[<a href="#citation-10">10</a>]</sup>,
+                and antibiotic resistance genes<sup class="reference">[<a href="#citation-11">11</a>]</sup>.
 
                 The number of genes and the specific source database where homology was found is provided (<table-ref>Table 4</table-ref>).
             </p>
@@ -11393,7 +11393,7 @@
             <h2>Subsystem Analysis</h2>
             <p>
                 A subsystem is a set of proteins that together implement a specific biological
-                process or structural complex<sup class="reference">[<a href="#citation-10">10</a>]</sup> and PATRIC annotation
+                process or structural complex<sup class="reference">[<a href="#citation-12">12</a>]</sup> and PATRIC annotation
                 includes an analysis of the subsystems unique to each genome.
                 An overview of the subsystems for this genome is provided in <fig-ref>Figure 2</fig-ref>.
             </p>
@@ -11411,14 +11411,14 @@
 
             <p>
                 The closest reference and representative genomes to 
-                were identified by Mash/MinHash<sup class="reference">[<a href="#citation-11">11</a>]</sup>. PATRIC global
+                were identified by Mash/MinHash<sup class="reference">[<a href="#citation-13">13</a>]</sup>. PATRIC global
                 protein families (PGFams)<sup class="reference">[<a href="#citation-5">5</a>]</sup> were selected from these
                 genomes to determine the phylogenetic placement of this genome.  The
-                protein sequences from these families were aligned with MUSCLE<sup class="reference">[<a href="#citation-13">13</a>]</sup>,
+                protein sequences from these families were aligned with MUSCLE<sup class="reference">[<a href="#citation-15">15</a>]</sup>,
                 and the nucleotides for each of those sequences were mapped to the protein alignment.
                 The joint set of amino acid and nucleotide alignments were concatenated into a data matrix,
-                and RaxML<sup class="reference">[<a href="#citation-14">14</a>]</sup> was used to analyze this matrix, with fast
-                bootstrapping<sup class="reference">[<a href="#citation-15">15</a>]</sup> was used to generate the support
+                and RaxML<sup class="reference">[<a href="#citation-16">16</a>]</sup> was used to analyze this matrix, with fast
+                bootstrapping<sup class="reference">[<a href="#citation-17">17</a>]</sup> was used to generate the support
                 values in the tree (<fig-ref>Figure 3</fig-ref>).
             </p>
 
@@ -11443,7 +11443,7 @@
         -->
         
         <h2>References</h2>
-        <references><ol class="references"><li id="citation-0">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-1">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-2">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-3">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-4">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-5">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-6">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-7">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-8">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-9">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-10">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-11">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-12">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-13">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-14">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
+        <references><ol class="references"><li id="citation-0">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-1">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-2">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-3">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-4">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-5">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-6">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-7">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-8">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-9">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-10">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-11">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-12">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-13">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-14">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-15">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-16">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
 
 
     
