more sample reports

--- a/reports/test-report-amr.html
+++ b/reports/test-report-amr.html
@@ -144,7 +144,7 @@
             -->
 
             <div class="report-info pull-right">
-                <span>Report Date:</span> 04/26/2018<br>
+                <span>Report Date:</span> 04/30/2018<br>
                 <span>Organism:</span> Staphylococcus aureus strain VB4283
             </div>
         </header>
@@ -159,15 +159,17 @@
         -->
         <section>
             <h2>Genome Assembly</h2>
-            <p>
-                An assembled genome was submitted to the Comprehensive Genome Analysis service.
-                This assembled genome had
-                    78 contigs,
-                with the total length of
-                    ~2.8 Mbp
-                and an average G+C content of
-                    32.70% (<table-ref>Table 1</table-ref>).
-            </p>
+
+                <p>
+                    An assembled genome was submitted to the Comprehensive Genome Analysis service.
+                    This assembled genome had
+                        78 contigs,
+                    with the total length of
+                        2796422 bp
+                    and an average G+C content of
+                        32.70% (<table-ref>Table 1</table-ref>).
+                </p>
+
 
             <table class="sm-table kv-table center">
                 <thead class="table-header">
@@ -234,15 +236,15 @@
                 <tbody>
                     <tr>
                         <td>Job ID</td>
-                        <td class="align-right"></td>
+                        <td class="align-right">N/A</td>
                     </tr>
                     <tr>
                         <td>Job Started</td>
-                        <td class="align-right">April 26th 2018, 7:31:17pm</td>
+                        <td class="align-right">April 30th 2018, 4:07:40pm</td>
                     </tr>
                     <tr>
                         <td>Job Completed</td>
-                        <td class="align-right">April 26th 2018, 7:31:17pm</td>
+                        <td class="align-right">April 30th 2018, 4:07:40pm</td>
                     </tr><tr>
                     </tr>
                         <tr><td>Total Time</td>
@@ -289,6 +291,12 @@
                             </td>
                         </tr>
                         <tr>
+                            <td>Repeat Regions</td>
+                            <td class="align-right">
+                                127
+                            </td>
+                        </tr>
+                        <tr>
                             <td>tRNA</td>
                             <td class="align-right">
                                 56
@@ -312,14 +320,9 @@
                                 0
                             </td>
                         </tr>
-                        <tr>
-                            <td>Repeat Regions</td>
-                            <td class="align-right">
-                                127
-                            </td>
-                        </tr>
                 </tbody>
             </table>
+
 
             <p>
                 The annotation included
@@ -328,20 +331,16 @@
                     (<table-ref>Table 3</table-ref>).
 
                 The proteins with functional assignments included
-                    766
-                proteins with Enzyme Commission (EC) numbers<sup class="reference">[<a href="#citation-2">2</a>]</sup>,
-                    634
-                with Gene Ontology (GO) assignments<sup class="reference">[<a href="#citation-3">3</a>]</sup>, and
-                    556
-                    proteins that were mapped to KEGG pathways<sup class="reference">[<a href="#citation-4">4</a>]</sup>.
+                    766 proteins with Enzyme Commission (EC) numbers<sup class="reference">[<a href="#citation-2">2</a>]</sup>,
+                    634 with Gene Ontology (GO) assignments<sup class="reference">[<a href="#citation-3">3</a>]</sup>, and
+                    556 proteins that were mapped to KEGG pathways<sup class="reference">[<a href="#citation-4">4</a>]</sup>.
                 PATRIC annotation includes two types of protein families<sup class="reference">[<a href="#citation-5">5</a>]</sup>,
                 and this genome has
-                    2,673
-                    proteins that belong to the genus-specific protein families (PLFams)
-                for Buchnera, and
-                    2,673
-                    proteins that belong to the cross-genus protein families (PGFams).
+                    2,673 proteins that belong to the genus-specific protein families (PLFams)
+                for , and
+                    2,673 proteins that belong to the cross-genus protein families (PGFams).
             </p>
+
 
             <table class="med-table kv-table center">
                 <thead class="table-header">
@@ -354,27 +353,19 @@
                     <tr class="row-header"><td></td> <td class="align-right">Count</td></tr>
                     <tr>
                         <td>Hypothetical proteins</td>
-                        <td class="align-right">
-                            527
-                        </td>
+                        <td class="align-right">527</td>
                     </tr>
                     <tr>
                         <td>Proteins with functional assignments</td>
-                        <td class="align-right">
-                            2,190
-                        </td>
+                        <td class="align-right">2,190</td>
                     </tr>
                     <tr>
                         <td>Proteins with EC number assignments</td>
-                        <td class="align-right">
-                            766
-                        </td>
+                        <td class="align-right">766</td>
+                    </tr><tr>
                     </tr>
-                    <tr>
-                        <td>Proteins with GO assignments</td>
-                        <td class="align-right">
-                            634
-                        </td>
+                        <tr><td>Proteins with GO assignments</td>
+                        <td class="align-right">634</td>
                     </tr>
                     <tr>
                         <td>Proteins with Pathway assignments</td>
@@ -390,9 +381,7 @@
                     </tr>
                     <tr>
                         <td>Proteins with PATRIC cross-genus family (PGfam) assignments</td>
-                        <td class="align-right">
-                            2,673
-                        </td>
+                        <td class="align-right">2,673</td>
                     </tr>
                 </tbody>
             </table>
@@ -11265,7 +11254,7 @@
             <h2>Genome Quality</h2>
             <p>
                 Based on an examination of the annotation statistics and a comparison to
-                other genomes in PATRIC (Wattam, et al. 2017) within this same species,
+                other genomes in PATRIC<sup class="reference">[<a href="#citation-6">6</a>]</sup> within this same species,
                 this genome appears to be of <b>Good</b> quality.
             </p>
             <p>
@@ -11283,10 +11272,10 @@
         <section>
             <h2>Specialty Genes</h2>
             <p>
-                Many of the genes annotated in  have homology to known known
-                transporters<sup class="reference">[<a href="#citation-6">6</a>]</sup>, virulence factors<sup class="reference">[<a href="#citation-7">7</a>]</sup><sup class="reference">[<a href="#citation-8">8</a>]</sup>,
-                drug targets<sup class="reference">[<a href="#citation-9">9</a>]</sup><sup class="reference">[<a href="#citation-10">10</a>]</sup>,
-                and antibiotic resistance genes<sup class="reference">[<a href="#citation-11">11</a>]</sup>.
+                Many of the genes annotated in  have homology to known
+                transporters<sup class="reference">[<a href="#citation-7">7</a>]</sup>, virulence factors<sup class="reference">[<a href="#citation-8">8</a>]</sup><sup class="reference">[<a href="#citation-9">9</a>]</sup>,
+                drug targets<sup class="reference">[<a href="#citation-10">10</a>]</sup><sup class="reference">[<a href="#citation-11">11</a>]</sup>,
+                and antibiotic resistance genes<sup class="reference">[<a href="#citation-12">12</a>]</sup>.
 
                 The number of genes and the specific source database where homology was found is provided (<table-ref>Table 4</table-ref>).
             </p>
@@ -11354,8 +11343,10 @@
         <!--
           ## AMR
         -->
+
         <section>
             <h2>Antimicrobial Resistance Analysis</h2>
+
             <table class="lg-table kv-table center">
                 <thead class="table-header">
                     <tr>
@@ -11380,10 +11371,10 @@
 
             </table>
 
-            <h2>Antimicrobial Resistance Genes</h2>
 
-            [Incomplete]
+
         </section>
+
 
 
         <!--
@@ -11393,7 +11384,7 @@
             <h2>Subsystem Analysis</h2>
             <p>
                 A subsystem is a set of proteins that together implement a specific biological
-                process or structural complex<sup class="reference">[<a href="#citation-12">12</a>]</sup> and PATRIC annotation
+                process or structural complex<sup class="reference">[<a href="#citation-13">13</a>]</sup> and PATRIC annotation
                 includes an analysis of the subsystems unique to each genome.
                 An overview of the subsystems for this genome is provided in <fig-ref>Figure 2</fig-ref>.
             </p>
@@ -11411,14 +11402,14 @@
 
             <p>
                 The closest reference and representative genomes to 
-                were identified by Mash/MinHash<sup class="reference">[<a href="#citation-13">13</a>]</sup>. PATRIC global
+                were identified by Mash/MinHash<sup class="reference">[<a href="#citation-14">14</a>]</sup>. PATRIC global
                 protein families (PGFams)<sup class="reference">[<a href="#citation-5">5</a>]</sup> were selected from these
                 genomes to determine the phylogenetic placement of this genome.  The
-                protein sequences from these families were aligned with MUSCLE<sup class="reference">[<a href="#citation-15">15</a>]</sup>,
+                protein sequences from these families were aligned with MUSCLE<sup class="reference">[<a href="#citation-16">16</a>]</sup>,
                 and the nucleotides for each of those sequences were mapped to the protein alignment.
                 The joint set of amino acid and nucleotide alignments were concatenated into a data matrix,
-                and RaxML<sup class="reference">[<a href="#citation-16">16</a>]</sup> was used to analyze this matrix, with fast
-                bootstrapping<sup class="reference">[<a href="#citation-17">17</a>]</sup> was used to generate the support
+                and RaxML<sup class="reference">[<a href="#citation-17">17</a>]</sup> was used to analyze this matrix, with fast
+                bootstrapping<sup class="reference">[<a href="#citation-18">18</a>]</sup> was used to generate the support
                 values in the tree (<fig-ref>Figure 3</fig-ref>).
             </p>
 
@@ -11443,7 +11434,7 @@
         -->
         
         <h2>References</h2>
-        <references><ol class="references"><li id="citation-0">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-1">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-2">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-3">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-4">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-5">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-6">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-7">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-8">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-9">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-10">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-11">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-12">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-13">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-14">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-15">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-16">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
+        <references><ol class="references"><li id="citation-0">Brettin T, Davis JJ, Disz T, Edwards RA, Gerdes S, Olsen GJ, Olson R, Overbeek R, Parrello B, Pusch GD, et al. 2015. RASTtk: a modular and extensible implementation of the RAST algorithm for building custom annotation pipelines and annotating batches of genomes. Sci Rep 5:8365.</li><li id="citation-1">Schomburg I, Chang A, Ebeling C, Gremse M, Heldt C, Huhn G, Schomburg D. 2004. BRENDA, the enzyme database: updates and major new developments. Nucleic Acids Res 32:D431-D433.</li><li id="citation-2">Ashburner M, Ball CA, Blake JA, Botstein D, Butler H, Cherry JM, Davis AP, Dolinski K, Dwight SS, Eppig JT. 2000. Gene Ontology: tool for the unification of biology. Nature genetics 25:25.</li><li id="citation-3">Kanehisa M, Sato Y, Kawashima M, Furumichi M, Tanabe M. 2016. KEGG as a reference resource for gene and protein annotation. Nucleic Acids Res 44:D457-462.</li><li id="citation-4">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-5">Wattam AR, Davis JJ, Assaf R, Boisvert S, Brettin T, Bun C, Conrad N, Dietrich EM, Disz T, Gabbard JL, et al. 2017. Improvements to PATRIC, the all-bacterial Bioinformatics Database and Analysis Resource Center. Nucleic Acids Res 45:D535-D542.</li><li id="citation-6">Saier Jr MH, Reddy VS, Tsu BV, Ahmed MS, Li C, Moreno-Hagelsieb G. 2015. The transporter classification database (TCDB): recent advances. Nucleic Acids Res 44:D372-D379.</li><li id="citation-7">Mao C, Abraham D, Wattam AR, Wilson MJ, Shukla M, Yoo HS, Sobral BW. 2015. Curation, integration and visualization of bacterial virulence factors in PATRIC. Bioinformatics 31:252-258.</li><li id="citation-8">Chen L, Zheng D, Liu B, Yang J, Jin Q. 2016. VFDB 2016: hierarchical and refined dataset for big data analysis-10 years on. Nucleic Acids Res 44:D694-D697.</li><li id="citation-9">Zhu F, Han B, Kumar P, Liu X, Ma X, Wei X, Huang L, Guo Y, Han L, Zheng C. 2009. Update of TTD: therapeutic target database. Nucleic Acids Res 38:D787-D791.</li><li id="citation-10">Law V, Knox C, Djoumbou Y, Jewison T, Guo AC, Liu Y, Maciejewski A, Arndt D, Wilson M, Neveu V, et al. 2014. DrugBank 4.0: shedding new light on drug metabolism. Nucleic Acids Res 42:D1091-1097.</li><li id="citation-11">McArthur AG, Waglechner N, Nizam F, Yan A, Azad MA, Baylay AJ, Bhullar K, Canova MJ, De Pascale G, Ejim L. 2013. The comprehensive antibiotic resistance database. Antimicrobial agents and chemotherapy 57:3348-3357.</li><li id="citation-12">Overbeek R, Begley T, Butler RM, Choudhuri JV, Chuang H-Y, Cohoon M, de Cr&#xE9;cy-Lagard V, Diaz N, Disz T, Edwards R. 2005. The subsystems approach to genome annotation and its use in the project to annotate 1000 genomes. Nucleic Acids Res 33:5691-5702.</li><li id="citation-13">Ondov BD, Treangen TJ, Melsted P, Mallonee AB, Bergman NH, Koren S, Phillippy AM. 2016. Mash: fast genome and metagenome distance estimation using MinHash. Genome biology 17:132.</li><li id="citation-14">Davis JJ, Gerdes S, Olsen GJ, Olson R, Pusch GD, Shukla M, Vonstein V, Wattam AR, Yoo H. 2016. PATtyFams: Protein Families for the Microbial Genomes in the PATRIC Database. Front Microbiol 7:118.</li><li id="citation-15">Edgar RC. 2004. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Res 32:1792-1797.</li><li id="citation-16">Stamatakis A. 2014. RAxML version 8: a tool for phylogenetic analysis and post-analysis of large phylogenies. Bioinformatics 30:1312-1313.</li><li id="citation-17">Stamatakis A, Hoover P, Rougemont J. 2008. A rapid bootstrap algorithm for the RAxML web servers. Systematic biology 57:758-771.</li></ol></references>
 
 
     
